# Pisa

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .stylelintignore  Caddyfile  Dockerfile  README.md  TESTING.md  TODO.md  docker-compose.prod.yml  docker-compose.yml  manage.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: security-scan.yml  tests.yml
apps/homework/: admin.py  apps.py  commons.py  consumers.py  context_processors.py  exports.py  forms.py  lean_lsp.py  lean_policy.py  lean_runner.py  models.py  ops.py  reporting.py  sandbox.py  selectors.py  stats.py  thumbnails.py  urls.py  utils.py
apps/homework/management/commands/: create_test_data.py  fetch_commons_thumbnail.py
apps/homework/migrations/: 0001_initial.py  0002_problem_allowed_axioms_problem_allowed_constructs_and_more.py  0003_course_renewed_from_course_section_course_term.py
apps/homework/templatetags/: thumbnail_presets.py
apps/homework/tests/: test_commons.py  test_consumer.py  test_forms.py  test_grades_logic.py  test_grading.py  test_lean_lsp.py  test_management.py  test_models.py  test_ops.py  test_permissions.py  test_problem_views.py  test_sandbox.py  test_stats.py  test_views.py  utils.py
apps/homework/views/: __init__.py  assignments.py  courses.py  dashboard.py  grades.py  lean_source_files.py  mixins.py  problems.py
homework/: apps.py  consumers.py  exports.py  forms.py  lean_lsp.py  models.py  routing.py  urls.py  views.py
homework/management/commands/: create_test_accounts.py
homework/migrations/: 0001_initial.py  0002_add_leansourcefile.py
homework/views/: __init__.py  assignments.py  courses.py  dashboard.py  export_grades.py  grades.py  lean_source_files.py  problems.py
pisa/: asgi.py  health.py  settings.py  urls.py  wsgi.py
scripts/: entrypoint.sh  find_lean_lsp.py  run_lsp_server.sh  scan_external_assets.py
static/homework/css/: base.css
static/homework/img/favicon/: site.webmanifest  sources.txt
static/homework/img/thumbnails/: README.md  aurora.json  ember.json  meadow.json  sources.txt  template.json
static/homework/js/: confirm-remove.js  course-grades.js  course-list-grades.js  course-roster.js  course-search.js  course-thumbnail.js  disclosure.js  grade-bars.js  problem-detail.js  problem-reorder.js  source-files.js  tabs.js
templates/cotton/: card.html  course_card.html  course_card_list.html  form_fields.html  image_credit.html  page_header.html  problem_name.html  roster_add_form.html  roster_remove_form.html  roster_section.html  source_files.html
templates/homework/: _course_stats.html  assignment_detail.html  assignment_form.html  assignment_list.html  base.html  course_detail.html  course_form.html  course_list.html  course_renew.html  dashboard.html  grades.html  lean_source_file_form.html  lean_source_file_list.html  problem_detail.html  problem_form.html
templates/registration/: login.html
