[project]
name = "pisa"
version = "0.1.0"
description = ""
authors = [{ name = "Samuel Lowe", email = "samlowe106@gmail.com" }]
requires-python = ">=3.10,<4"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "channels>=4.3.2",
    "daphne>=4.2.2",
    "django>=5.1.7,<6",
    "django-csp>=4.0",
    "openpyxl>=3.1.5",
    "pre-commit>=4.6.0",
    "python-dotenv>=1.2.2",
]

[tool.uv]
package = false

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.11.9,<0.12.0"]
build-backend = "uv_build"
