[project]
name = "pisa"
version = "0.1.0"
description = ""
authors = [{ name = "Samuel Lowe", email = "samlowe106@gmail.com" }]
requires-python = ">=3.10,<4"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "channels>=4.3.2",
    "daphne>=4.2.2",
    "django>=5.2.15,<6",
    "django-cotton>=2.0",
    "django-csp>=4.0",
    "openpyxl>=3.1.5",
    "pillow>=12.2.0",
    "python-dotenv>=1.2.2",
    "sentry-sdk[django]>=2.63.0",
    "whitenoise>=6.12.0",
]

[dependency-groups]
dev = [
    "coverage[toml]>=7.0",
    "pre-commit>=4.6.0",
]

[tool.uv]
package = false

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.11.9,<0.12.0"]
build-backend = "uv_build"

[tool.coverage.run]
branch = true
source = ["apps", "pisa"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "manage.py",
    "pisa/asgi.py",
    "pisa/wsgi.py",
]

[tool.coverage.report]
show_missing = true
# No `fail_under` yet: the suite has 0 tests, so a coverage gate would fail CI.
# Raise this once a baseline test suite exists.
