[project]
name = "pisa"
version = "0.1.0"
description = ""
authors = [{ name = "Samuel Lowe", email = "samlowe106@gmail.com" }]
requires-python = ">=3.10,<4"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "channels>=4.3.2",
    "daphne>=4.2.2",
    "django>=5.2.15,<6",
    "django-cotton>=2.0",
    "django-csp>=4.0",
    "openpyxl>=3.1.5",
    "pillow>=12.2.0",
    "python-dotenv>=1.2.2",
    "sentry-sdk[django]>=2.63.0",
    "whitenoise>=6.12.0",
]

[dependency-groups]
dev = [
    "coverage[toml]>=7.0",
    "django-stubs[compatible-mypy]>=6.0.6",
    "pre-commit>=4.6.0",
]

[tool.uv]
package = false

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.11.9,<0.12.0"]
build-backend = "uv_build"

[tool.coverage.run]
branch = true
source = ["apps", "pisa"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "manage.py",
    "pisa/asgi.py",
    "pisa/wsgi.py",
]

[tool.coverage.report]
show_missing = true
# No `fail_under` yet: the suite has 0 tests, so a coverage gate would fail CI.
# Raise this once a baseline test suite exists.

[tool.mypy]
# django-stubs teaches mypy about managers (.objects), field descriptors (a CharField is a
# str at runtime), and QuerySet types — so mypy actually understands the ORM instead of
# treating it as Any. Kept otherwise lenient (no strict-optional) to match prior behaviour;
# tighten later by turning on strict_optional / check_untyped_defs.
plugins = ["mypy_django_plugin.main"]
ignore_missing_imports = true
strict_optional = false
exclude = ['/migrations/']

[tool.django-stubs]
django_settings_module = "pisa.settings"

[tool.ruff.lint]
# Ruff's defaults (E4/E7/E9/F) already keep *module-level* imports at the top of the file
# (E402). PLC0415 extends that to forbid imports inside functions/methods, so every import
# lives at the top of its file.
extend-select = ["PLC0415"]

[tool.ruff.lint.per-file-ignores]
# Django's stock manage.py imports inside a try/except on purpose: the point is to catch the
# ImportError and print a "did you forget to activate your virtualenv?" hint. Hoisting the import
# to module level would turn that into a bare traceback, so PLC0415 is a false positive here.
"manage.py" = ["PLC0415"]
